Update 345-reverse-vowels-of-a-string.java